--- a/USER/阿松工作室.uvprojx
+++ b/USER/阿松工作室.uvprojx
@@ -14,16 +14,16 @@
       <pCCUsed>5060300::V5.06 update 3 (build 300)::ARMCC</pCCUsed>
       <TargetOption>
         <TargetCommonOption>
-          <Device>STM32F103VE</Device>
+          <Device>STM32F103ZE</Device>
           <Vendor>STMicroelectronics</Vendor>
           <PackID>Keil.STM32F1xx_DFP.2.2.0</PackID>
           <PackURL>http://www.keil.com/pack/</PackURL>
           <Cpu>IRAM(0x20000000,0x10000) IROM(0x08000000,0x80000) CPUTYPE("Cortex-M3") CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
           <StartupFile></StartupFile>
-          <FlashDriverDll>UL2CM3(-S0 -C0 -P0 -FD20000000 -FC1000 -FN1 -FF0STM32F10x_512 -FS08000000 -FL080000 -FP0($$Device:STM32F103VE$Flash\STM32F10x_512.FLM))</FlashDriverDll>
+          <FlashDriverDll>UL2CM3(-S0 -C0 -P0 -FD20000000 -FC1000 -FN1 -FF0STM32F10x_512 -FS08000000 -FL080000 -FP0($$Device:STM32F103ZE$Flash\STM32F10x_512.FLM))</FlashDriverDll>
           <DeviceId>0</DeviceId>
-          <RegisterFile>$$Device:STM32F103VE$Device\Include\stm32f10x.h</RegisterFile>
+          <RegisterFile>$$Device:STM32F103ZE$Device\Include\stm32f10x.h</RegisterFile>
           <MemoryEnv></MemoryEnv>
           <Cmp></Cmp>
           <Asm></Asm>
@@ -33,7 +33,7 @@
           <SLE66CMisc></SLE66CMisc>
           <SLE66AMisc></SLE66AMisc>
           <SLE66LinkerMisc></SLE66LinkerMisc>
-          <SFDFile>$$Device:STM32F103VE$SVD\STM32F103xx.svd</SFDFile>
+          <SFDFile>$$Device:STM32F103ZE$SVD\STM32F103xx.svd</SFDFile>
           <bCustSvd>0</bCustSvd>
           <UseEnv>0</UseEnv>
           <BinPath></BinPath>
@@ -336,7 +336,7 @@
               <MiscControls>--diag_suppress=111 --diag_suppress=174</MiscControls>
               <Define>USE_HAL_DRIVER,STM32F103xE</Define>
               <Undefine></Undefine>
-              <IncludePath>..\CORE;..\USER;..\OBJ;..\SYSTEM\delay;..\SYSTEM\sys;..\SYSTEM\usart;..\USMART;..\MALLOC;..\FATFS\exfuns;..\FATFS\src;..\HALLIB\STM32F1xx_HAL_Driver\Inc;..\HARDWARE\KEY;..\HARDWARE\LED;..\HARDWARE\LCD;..\HARDWARE\SD;..\HARDWARE\SPI;..\HARDWARE\W25QXX;..\TEXT;..\HARDWARE\TEA5767;..\HARDWARE\TIMER;..\..\LittleVGL\lv_port;..\..\LittleVGL\lvgl;..\..\LittleVGL</IncludePath>
+              <IncludePath>..\CORE;..\USER;..\OBJ;..\SYSTEM\delay;..\SYSTEM\sys;..\SYSTEM\usart;..\USMART;..\MALLOC;..\FATFS\exfuns;..\FATFS\src;..\HALLIB\STM32F1xx_HAL_Driver\Inc;..\HARDWARE\KEY;..\HARDWARE\LED;..\HARDWARE\LCD;..\HARDWARE\SD;..\HARDWARE\SPI;..\HARDWARE\W25QXX;..\TEXT;..\HARDWARE\TEA5767;..\HARDWARE\TIMER;..\..\LittleVGL\lv_port;..\..\LittleVGL\lvgl;..\..\LittleVGL;..\TFT_Drivers\ST7735_1_44;..\TFT_Drivers;..\..\LittleVGL\lv_examples\src\lv_demo_keypad_encoder</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -514,6 +514,76 @@
               <FileName>usart.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\SYSTEM\usart\usart.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>HARDWARE</GroupName>
+          <Files>
+            <File>
+              <FileName>led.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\HARDWARE\LED\led.c</FilePath>
+            </File>
+            <File>
+              <FileName>lcd.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\HARDWARE\LCD\lcd.c</FilePath>
+            </File>
+            <File>
+              <FileName>spi.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\HARDWARE\SPI\spi.c</FilePath>
+            </File>
+            <File>
+              <FileName>w25qxx.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\HARDWARE\W25QXX\w25qxx.c</FilePath>
+            </File>
+            <File>
+              <FileName>MMC_SD.C</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\HARDWARE\SD\MMC_SD.C</FilePath>
+            </File>
+            <File>
+              <FileName>TEA5767.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\HARDWARE\TEA5767\TEA5767.c</FilePath>
+            </File>
+            <File>
+              <FileName>timer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\HARDWARE\TIMER\timer.c</FilePath>
+            </File>
+            <File>
+              <FileName>key.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\HARDWARE\KEY\key.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>LCD/Drivers</GroupName>
+          <Files>
+            <File>
+              <FileName>st7735_spi.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\TFT_Drivers\ST7735_1_44\st7735_spi.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>LV_TEST_DEMO</GroupName>
+          <Files>
+            <File>
+              <FileName>lv_demo_widgets.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\LittleVGL\lv_examples\src\lv_demo_widgets\lv_demo_widgets.c</FilePath>
+            </File>
+            <File>
+              <FileName>lv_demo_keypad_encoder.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\LittleVGL\lv_examples\src\lv_demo_keypad_encoder\lv_demo_keypad_encoder.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -1084,51 +1154,6 @@
         </Group>
         <Group>
           <GroupName>LV_PORT</GroupName>
-        </Group>
-        <Group>
-          <GroupName>HARDWARE</GroupName>
-          <Files>
-            <File>
-              <FileName>led.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\HARDWARE\LED\led.c</FilePath>
-            </File>
-            <File>
-              <FileName>lcd.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\HARDWARE\LCD\lcd.c</FilePath>
-            </File>
-            <File>
-              <FileName>spi.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\HARDWARE\SPI\spi.c</FilePath>
-            </File>
-            <File>
-              <FileName>w25qxx.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\HARDWARE\W25QXX\w25qxx.c</FilePath>
-            </File>
-            <File>
-              <FileName>MMC_SD.C</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\HARDWARE\SD\MMC_SD.C</FilePath>
-            </File>
-            <File>
-              <FileName>TEA5767.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\HARDWARE\TEA5767\TEA5767.c</FilePath>
-            </File>
-            <File>
-              <FileName>timer.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\HARDWARE\TIMER\timer.c</FilePath>
-            </File>
-            <File>
-              <FileName>key.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\HARDWARE\KEY\key.c</FilePath>
-            </File>
-          </Files>
         </Group>
         <Group>
           <GroupName>MALLOC</GroupName>
