--- a/USER/阿松工作室.uvprojx
+++ b/USER/阿松工作室.uvprojx
@@ -14,16 +14,16 @@
       <pCCUsed>5060300::V5.06 update 3 (build 300)::ARMCC</pCCUsed>
       <TargetOption>
         <TargetCommonOption>
-          <Device>STM32F103ZE</Device>
+          <Device>STM32F103C8</Device>
           <Vendor>STMicroelectronics</Vendor>
           <PackID>Keil.STM32F1xx_DFP.2.2.0</PackID>
           <PackURL>http://www.keil.com/pack/</PackURL>
-          <Cpu>IRAM(0x20000000,0x10000) IROM(0x08000000,0x80000) CPUTYPE("Cortex-M3") CLOCK(12000000) ELITTLE</Cpu>
+          <Cpu>IRAM(0x20000000,0x5000) IROM(0x08000000,0x10000) CPUTYPE("Cortex-M3") CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
           <StartupFile></StartupFile>
-          <FlashDriverDll>UL2CM3(-S0 -C0 -P0 -FD20000000 -FC1000 -FN1 -FF0STM32F10x_512 -FS08000000 -FL080000 -FP0($$Device:STM32F103ZE$Flash\STM32F10x_512.FLM))</FlashDriverDll>
+          <FlashDriverDll>UL2CM3(-S0 -C0 -P0 -FD20000000 -FC1000 -FN1 -FF0STM32F10x_128 -FS08000000 -FL020000 -FP0($$Device:STM32F103C8$Flash\STM32F10x_128.FLM))</FlashDriverDll>
           <DeviceId>0</DeviceId>
-          <RegisterFile>$$Device:STM32F103ZE$Device\Include\stm32f10x.h</RegisterFile>
+          <RegisterFile>$$Device:STM32F103C8$Device\Include\stm32f10x.h</RegisterFile>
           <MemoryEnv></MemoryEnv>
           <Cmp></Cmp>
           <Asm></Asm>
@@ -33,7 +33,7 @@
           <SLE66CMisc></SLE66CMisc>
           <SLE66AMisc></SLE66AMisc>
           <SLE66LinkerMisc></SLE66LinkerMisc>
-          <SFDFile>$$Device:STM32F103ZE$SVD\STM32F103xx.svd</SFDFile>
+          <SFDFile>$$Device:STM32F103C8$SVD\STM32F103xx.svd</SFDFile>
           <bCustSvd>0</bCustSvd>
           <UseEnv>0</UseEnv>
           <BinPath></BinPath>
@@ -244,12 +244,12 @@
               <IRAM>
                 <Type>0</Type>
                 <StartAddress>0x20000000</StartAddress>
-                <Size>0x10000</Size>
+                <Size>0x5000</Size>
               </IRAM>
               <IROM>
                 <Type>1</Type>
                 <StartAddress>0x8000000</StartAddress>
-                <Size>0x80000</Size>
+                <Size>0x10000</Size>
               </IROM>
               <XRAM>
                 <Type>0</Type>
@@ -274,7 +274,7 @@
               <OCR_RVCT4>
                 <Type>1</Type>
                 <StartAddress>0x8000000</StartAddress>
-                <Size>0x80000</Size>
+                <Size>0x10000</Size>
               </OCR_RVCT4>
               <OCR_RVCT5>
                 <Type>1</Type>
@@ -299,7 +299,7 @@
               <OCR_RVCT9>
                 <Type>0</Type>
                 <StartAddress>0x20000000</StartAddress>
-                <Size>0x10000</Size>
+                <Size>0x5000</Size>
               </OCR_RVCT9>
               <OCR_RVCT10>
                 <Type>0</Type>
@@ -336,7 +336,7 @@
               <MiscControls>--diag_suppress=111 --diag_suppress=174</MiscControls>
               <Define>USE_HAL_DRIVER,STM32F103xE</Define>
               <Undefine></Undefine>
-              <IncludePath>..\CORE;..\USER;..\OBJ;..\SYSTEM\delay;..\SYSTEM\sys;..\SYSTEM\usart;..\USMART;..\MALLOC;..\FATFS\exfuns;..\FATFS\src;..\HALLIB\STM32F1xx_HAL_Driver\Inc;..\HARDWARE\KEY;..\HARDWARE\LED;..\HARDWARE\LCD;..\HARDWARE\SD;..\HARDWARE\SPI;..\HARDWARE\W25QXX;..\TEXT;..\HARDWARE\TEA5767;..\HARDWARE\TIMER;..\..\LittleVGL\lv_port;..\..\LittleVGL\lvgl;..\..\LittleVGL;..\TFT_Drivers\ST7735_1_44;..\TFT_Drivers;..\..\LittleVGL\lv_examples\src\lv_demo_keypad_encoder</IncludePath>
+              <IncludePath>..\CORE;..\USER;..\OBJ;..\SYSTEM\delay;..\SYSTEM\sys;..\SYSTEM\usart;..\USMART;..\MALLOC;..\FATFS\exfuns;..\FATFS\src;..\HALLIB\STM32F1xx_HAL_Driver\Inc;..\HARDWARE\KEY;..\HARDWARE\LED;..\HARDWARE\SD;..\HARDWARE\SPI;..\HARDWARE\W25QXX;..\TEXT;..\HARDWARE\TEA5767;..\HARDWARE\TIMER;..\..\LittleVGL\lv_port;..\..\LittleVGL\lvgl;..\..\LittleVGL;..\..\LittleVGL\lv_examples\src\lv_demo_keypad_encoder;..\LCD_Drivers;..\LCD_Drivers\ST7735_1_44;..\LCD_Drivers\TFT_LCD;..\LCD_Drivers\OLED_0_96_IIC;..\LCD_Drivers\ST7789_1_14;..\TCPUDP_Drivers\ESP8266</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -526,11 +526,6 @@
               <FilePath>..\HARDWARE\LED\led.c</FilePath>
             </File>
             <File>
-              <FileName>lcd.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\HARDWARE\LCD\lcd.c</FilePath>
-            </File>
-            <File>
               <FileName>spi.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\HARDWARE\SPI\spi.c</FilePath>
@@ -568,7 +563,32 @@
             <File>
               <FileName>st7735_spi.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\TFT_Drivers\ST7735_1_44\st7735_spi.c</FilePath>
+              <FilePath>..\LCD_Drivers\ST7735_1_44\st7735_spi.c</FilePath>
+            </File>
+            <File>
+              <FileName>tft_lcd.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\LCD_Drivers\TFT_LCD\tft_lcd.c</FilePath>
+            </File>
+            <File>
+              <FileName>oled_iic.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\LCD_Drivers\OLED_0_96_IIC\oled_iic.c</FilePath>
+            </File>
+            <File>
+              <FileName>st7789_spi.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\LCD_Drivers\ST7789_1_14\st7789_spi.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>TCPUDP/Drivers</GroupName>
+          <Files>
+            <File>
+              <FileName>esp8266_uart.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\TCPUDP_Drivers\ESP8266\esp8266_uart.c</FilePath>
             </File>
           </Files>
         </Group>
