--- a/USER/阿松工作室.uvprojx
+++ b/USER/阿松工作室.uvprojx
@@ -333,10 +333,10 @@
             <v6WtE>0</v6WtE>
             <v6Rtti>0</v6Rtti>
             <VariousControls>
-              <MiscControls>--diag_suppress=111 --diag_suppress=174</MiscControls>
+              <MiscControls>--diag_suppress=111 --diag_suppress=174 --locale=english</MiscControls>
               <Define>USE_HAL_DRIVER,STM32F103xE</Define>
               <Undefine></Undefine>
-              <IncludePath>..\CORE;..\USER;..\OBJ;..\SYSTEM\delay;..\SYSTEM\sys;..\SYSTEM\usart;..\USMART;..\MALLOC;..\FATFS\exfuns;..\FATFS\src;..\HALLIB\STM32F1xx_HAL_Driver\Inc;..\HARDWARE\KEY;..\HARDWARE\LED;..\HARDWARE\SD;..\HARDWARE\SPI;..\HARDWARE\W25QXX;..\TEXT;..\HARDWARE\TEA5767;..\HARDWARE\TIMER;..\..\LittleVGL\lv_port;..\..\LittleVGL\lvgl;..\..\LittleVGL;..\..\LittleVGL\lv_examples\src\lv_demo_keypad_encoder;..\LCD_Drivers;..\LCD_Drivers\ST7735_1_44;..\LCD_Drivers\TFT_LCD;..\LCD_Drivers\OLED_0_96_IIC;..\LCD_Drivers\ST7789_1_14;..\TCPUDP_Drivers\ESP8266</IncludePath>
+              <IncludePath>..\CORE;..\USER;..\OBJ;..\SYSTEM\delay;..\SYSTEM\sys;..\SYSTEM\usart;..\USMART;..\MALLOC;..\FATFS\exfuns;..\FATFS\src;..\HALLIB\STM32F1xx_HAL_Driver\Inc;..\HARDWARE\KEY;..\HARDWARE\LED;..\HARDWARE\SD;..\HARDWARE\SPI;..\HARDWARE\W25QXX;..\TEXT;..\HARDWARE\TEA5767;..\HARDWARE\TIMER;..\..\LittleVGL\lv_port;..\..\LittleVGL\lvgl;..\..\LittleVGL;..\..\LittleVGL\lv_examples\src\lv_demo_keypad_encoder;..\LCD_Drivers;..\LCD_Drivers\ST7735_1_44;..\LCD_Drivers\TFT_LCD;..\LCD_Drivers\OLED_0_96_IIC;..\TCPUDP_Drivers\ESP8266;..\LCD_Drivers\ST7789_1_3</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -578,7 +578,7 @@
             <File>
               <FileName>st7789_spi.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\LCD_Drivers\ST7789_1_14\st7789_spi.c</FilePath>
+              <FilePath>..\LCD_Drivers\ST7789_1_3\st7789_spi.c</FilePath>
             </File>
           </Files>
         </Group>
